# ml-infra-escape-room

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
challenges/01-permissions-panic/: README.md  broken_policy.tf  check_solution.py
challenges/02-rag-pipeline/: README.md  check_solution.py  starter_rag.py
challenges/03-locust-load-test/: README.md  load_test_results.md  locustfile.py
challenges/04-cost-explosion/: README.md  check_solution.py  costly_agent.py
challenges/05-final-boss/: README.md  check_solution.py  main.tf  outputs.tf  providers.tf  tfplan  variables.tf
mock-infra/app/: Dockerfile  main.py  pyproject.toml
